<resources>
  <string name="app_name">Apps</string>
  <string name="weather">天气预报</string>
  <string name="cnode">CNode</string>
  <string name="oschina">开源中国</string>
  <string name="ithome">IT之家</string>
  <string name="loading">正在加载，请稍候...</string>
  <string name="cancel">取消</string>
  <string name="toutiaoio">开发者头条</string>
  <string name="tuicool">推酷</string>
  <string name="segmentfault">SegmentFault</string>
  <string name="v2ex">V2EX</string>
  <string name="zhihu_daily">知乎日报</string>
  <string name="w3cplus">w3cplus</string>
  <string name="osc_industry">综合资讯</string>
  <string name="osc_project">软件更新资讯</string>
  <string name="v2ex_latest">最新主题</string>
  <string name="v2ex_hot">最热主题</string>

  <string name="load_more_endless">加载更多</string>
  <string name="load_more_fail">加载失败，点击重试</string>
  <string name="load_more_nomore">已经到底啦</string>

  <string name="press_back_again_to_exit">再按一次退出</string>
  <string name="open_in_browser">在浏览器里打开</string>
  <string name="choose_browser">请选择浏览器</string>
  <string name="share">分享</string>
  <string name="add">添加</string>
  <string name="menu_weather">天气</string>
  <string name="menu_swap">正/倒序</string>
  <string name="share_from">分享来自Apps</string>
  <string name="get_data_failure">获取数据失败</string>
  <string name="city">城市: </string>
  <string name="sendible_temp">体感温度: </string>
  <string name="temp">°C</string>
  <string name="pm25">PM2.5: </string>
  <string name="quality">空气质量: </string>
  <string name="ziwaixian">紫外线: </string>
  <string name="hourly_weather">逐时天气</string>

  <string name="title_news">资讯</string>
  <string name="title_weather">天气</string>
  <string name="title_todo">TODO</string>
  <string name="title_setting">设置</string>
  <string name="title_book">小说</string>
  <string name="type_location">请输入地名</string>
  <string name="type_book">请输入书名/作者</string>
  <string name="msg_error_location">你输入的地址不正确</string>
  <string name="msg_warn_refresh_page">请刷新当前页</string>
  <string name="weather_time">时间</string>
  <string name="weather_weather">天气</string>
  <string name="weather_rain">降水</string>
  <string name="weather_lowtemp">最低气温</string>
  <string name="weather_hightemp">最高气温</string>
  <string name="weather_wd">风向</string>
  <string name="weather_ws">风速</string>
  <string name="alert_book_not_exist">你选择的书箱不存在</string>
  <string name="update_remote_books">请先更新书库信息</string>
  <string name="update">更新</string>
  <string name="prevBtn">上一页</string>
  <string name="nextBtn">下一页</string>
  <string name="system_warning">系统提示</string>
  <string name="info_delete_book">确定要删除本书吗？</string>
  <string name="info_delete_todo">确定要删除吗？</string>
  <string name="toutiaocom">今日头条</string>
  <string name="itnews">IT资讯</string>
  <string name="othernews">其它资讯</string>
  <string name="newsbrother">新闻哥</string>
  <string name="tencentnews">腾讯新闻</string>
  <string name="tencent_tab_news">新闻</string>
  <string name="tencent_tab_shehui">社会</string>
  <string name="tencent_tab_mil">军事</string>
  <string name="tencent_tab_huati">话题</string>
  <string name="please_type">请输入</string>
  <string name="importnew">ImportNew</string>
  <string name="segmentfault_recommend">推荐的</string>
  <string name="segmentfault_newest">全部的</string>
  <string name="segmentfault_hottest">热门的</string>
</resources>
